nav fixed and  alignement

--- a/css/about.css
+++ b/css/about.css
@@ -12,6 +12,9 @@ body {
 a {
   text-decoration: none;
 }
+i {
+  transform: scale(0.75);
+}
 /* -----------------------header------------------------ */
 header {
   position: fixed;
@@ -66,17 +69,68 @@ header {
   list-style-type: none;
 }
 .header-container .section-nav ul a {
-  text-decoration: none;
-  color: #50729f;
-}
-#semini {
   color: var(--Primary-dark-blue--2, #315484);
+
+  /* Label */
   font-family: Merriweather;
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  cursor: none;
+}
+.rotate {
+  transform: rotate(-180deg) scale(0.75);
+  transition: all 0.3s ease;
+}
+.fa-angle-up {
+  transition: all 0.3s ease;
+}
+#semini {
+  display: flex;
+  width: 14.1875rem;
+  padding-left: 1.25rem;
+  flex-direction: column;
+  align-items: center;
+}
+
+#semini ul {
+  display: none;
+  background: #fff;
+}
+
+#semini:hover ul {
+  display: block;
+}
+#semini a li {
+  color: var(--Primary-dark-blue--2, #315484);
+  /* Labale small */
+  font-family: Merriweather;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#semini > li {
+  display: flex;
+  padding: 0.625rem;
+  gap: 0.625rem;
+  align-items: center;
+  text-align: start;
+  justify-content: center;
+  width: 25rem;
+  color: var(--Primary-dark-blue--2, #315484);
+}
+#semini > li label {
+  cursor: pointer;
+}
+#semini > li label:hover {
+  color: #fff;
+}
+
+#semini li:hover {
+  background-color: #113668;
+  color: #fff;
+  transition: all 0.4s linear;
 }
 .container-drop {
   position: relative;
@@ -87,18 +141,20 @@ header {
 }
 .show-style {
   position: absolute;
-  text-align: center;
-  width: max-content;
-  margin-top: 0.4rem;
-  background: #e6e4e4c9;
-  height: auto;
-  margin-left: -2.1rem;
+  overflow: hidden;
+  width: 17.1875rem;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: 0rem 1rem 0rem 0rem;
+  background: #fff;
+  margin-top: 1.3rem;
 }
 .show-style a li {
-  padding: 0.8rem;
-  width: 12rem;
-  font-size: 0.8rem;
-  color: #113668;
+  display: flex;
+  padding: 0.625rem 0.625rem 0.625rem 1.25rem;
+  align-items: flex-start;
+  gap: 0.625rem;
+  align-self: stretch;
 }
 .show-style a li:hover {
   background-color: #113668;
